Fixed names for files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:200,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="jeff.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
@@ -158,6 +158,6 @@
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>	
-<script type="text/javascript" src="jeff.js"></script>
+<script type="text/javascript" src="client.js"></script>
 </body>
 </html>
