Change some text lines

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <!-- Intro Text -->
 <div class="container-fluid" id="head-container">
 	<h2 id="pheader">
-		Hi, my name is Jeff.  I'm a web developer living out here in sunny Colorado Springs, CO.<br> Thanks for checking out my site!
+		Hi, my name is Jeff.  I'm a web developer living out here in sunny Colorado Springs, CO.<br> I look forward to connecting with you!
 	</h2>
 </div>
 
