--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 
 <html>
 <head>
-	<title>Jeff Connelly</title>
+  <title>Jeff Connelly</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="HandheldFriendly" content="true">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet">
@@ -67,7 +73,7 @@
 <!-- Intro Text -->
 <div class="container-fluid" id="head-container">
 	<h2 id="pheader">
-		Hi, my name is Jeff.  I'm a web developer living out here in sunny Colorado Springs, CO.<br> I look forward to connecting with you!
+		Hi, my name is Jeff.  I'm a full stack developer living out here in sunny Colorado Springs, CO.<br> I look forward to connecting with you!
 	</h2>
 </div>
 
