Some style changes

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     I aim to build clean, scalable, and consistent code for every project, motivated by a growth mindset and a commitment to mastery.
     <br>
     <br>
-    When I can pull myself away from code, you'll find me hiking, camping, gaming, reading, and adventuring with my mutt pup, Bruno.  Check out some of my projects below!
+    When I can pull myself away from code, you'll find me hiking, camping, gaming, reading, and adventuring with my mutt pup, Bruno.  Check out some of my projects below, and always feel free to reach out to me. 
     </p>
   </div>
 </section>
@@ -114,11 +114,8 @@
         <p>Hikes to Hops is an app that searches for local trails and will pair your trail of choice with a nearby brewery for your victory lap! The app uses Google Map's geolocation API, the Hiking Project API, and the BreweryDB API.
         <br>
         <br>
-        Technologies Used: ES6 JavaScript, jQuery, HTML5, CSS3
         </p>
-        <a href="https://hikes-to-hops.herokuapp.com/" target="_blank">
-          <p>Link</p>
-        </a>
+          <p class="center-p">Check out the  <a href="https://hikes-to-hops.herokuapp.com/" target="_blank">site</a></p>
       </div>
     </section>
 
@@ -131,11 +128,8 @@
         <p>StreamLine your streaming process! StreamLine is the definitive directory for finding where you can watch movies and TV shows across multiple streaming services.  I primarily coded the backend for this project, working with Node/Express, MongoDB/Mongoose for the database, RESTful endpoints and testing with Mocha & Chai.
         <br>
         <br>
-        Technologies Used: Node.js, Express.js, MongoDB & Mongoose, ES6 JavaScript, jQuery, HTML5, CSS3.
         </p>
-        <a href="https://streamline-capstone.herokuapp.com/" target="_blank">
-          <p>Link</p>
-        </a>
+          <p class="center-p">Check out the <a href="https://streamline-capstone.herokuapp.com/" target="_blank">site</a></p>
       </div>
     </section>
 
@@ -149,8 +143,8 @@
         <p>Hikes to Hops is an app that searches for local trails and will pair your trail of choice with a nearby brewery for your victory lap! The app uses Google Map's geolocation API, the Hiking Project API, and the BreweryDB API.
         <br>
         <br>
-        Technologies Used: ES6 JavaScript, jQuery, HTML5, CSS3
         </p>
+        <p class="center-p">Check out the  <a href="https://hikes-to-hops.herokuapp.com/" target="_blank">site</a></p>
       </div>
     </section>
 </section>
@@ -158,12 +152,13 @@
 <footer role="contentinfo">
   <section id="contact-container">
       <h1 class="projects-header">Contact</h1>
-      <h3 class="contact-info">Check Out my <a href="https://github.com/jeffconnelly" target="_blank">Github</a>  <span class="fa fa-github" aria-hidden="true"></span> </h3>
-      <h3 class="contact-info">Reach Out to Me On <a href="https://www.linkedin.com/in/jeff-connelly-68394b65/" target="_blank">LinkedIn</a>  <span class="fa Example of linkedin-square fa-linkedin-square" aria-hidden="true"></span></h3>
+      <h3 class="contact-info">Check out my <a href="https://github.com/jeffconnelly" target="_blank">Github</a>  <span class="fa fa-github" aria-hidden="true"></span> </h3>
+      <h3 class="contact-info">Reach out to me on <a href="https://www.linkedin.com/in/jeff-connelly-68394b65/" target="_blank">LinkedIn</a>  <span class="fa Example of linkedin-square fa-linkedin-square" aria-hidden="true"></span></h3>
       <h3 class="contact-info last-contact">Email me at <a href="mailto:jeff.connelly6@gmail.com" target="_top">jeff.connelly6@gmail.com</a></h3>
   </section>
 </footer>
 </main>
+
 <!-- jQuery/JS import-->
 <script src="https://code.jquery.com/jquery-3.2.1.js"
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
