Changed content text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!-- Intro Text Section -->
 <div class="container-fluid" id="head-container">
 	<h2 id="pheader">
-		Hi, my name is Jeff.  I'm a full stack developer living out here in sunny Colorado Springs, CO.<br> I look forward to connecting with you!
+		Hi, I'm Jeff.  I'm a full stack developer living out here in sunny Colorado Springs, CO.<br> I look forward to connecting with you!
 	</h2>
 </div>
 
@@ -89,9 +89,9 @@
     <h2 id="aheader">
       About Me
     </h2>
-    <p>I am a 26-year-old full stack web developer, working primarily with the JavaScript MERN stack of Mongo, Express, React, and Node.js. I love coding projects from the spark of an idea all the way to fully functional and powerful full stack applications.
+    <p>I'm a 26-year-old full stack web developer, working primarily with the JavaScript MERN stack of Mongo, Express, React, and Node.js. I love coding projects from the spark of an idea all the way to fully functional and powerful web applications.
 
-    I aim to build clean, scalable, and consistent code for every project, motivated by a growth mindset and a commitment to mastery.
+    I aim to build clean, scalable, and consistent code for every project, motivated by a growth mindset and an enthusiasm to learn something new, everyday.
     <br>
     <br>
     When I can pull myself away from code, you'll find me hiking, camping, gaming, reading, and adventuring with my mutt pup, Bruno.  Check out some of my projects below, and always feel free to reach out to me. 
