Updated more info and styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-			<a href="#" class="navbar-brand"><span class="fa fa-superpowers" aria-hidden="true"></span> Jeff Connelly</a>
+			<a href="#" class="navbar-brand"><span class="fa fa-paw" aria-hidden="true"></span> Jeff Connelly</a>
 		</div>
 		<div class="collapse navbar-collapse" id="bs-nav-demo">
 
@@ -89,12 +89,12 @@
     <h2 id="aheader">
       About Me
     </h2>
-    <p>I'm a 26-year-old full stack web developer, working primarily with the JavaScript MERN stack of Mongo, Express, React, and Node.js. I love coding projects from the spark of an idea all the way to fully functional and powerful web applications.
+    <p>I work primarily with the JavaScript MERN stack of MongoDB, Express, React, and Node.js, but I'm always excited to pick up new techologies. I love coding projects from the spark of an idea all the way to fully functional and powerful web applications.
 
     I aim to build clean, scalable, and consistent code for every project, motivated by a growth mindset and an enthusiasm to learn something new, everyday.
     <br>
     <br>
-    When I can pull myself away from code, you'll find me hiking, camping, gaming, reading, and adventuring with my mutt pup, Bruno.  Check out some of my projects below, and always feel free to reach out to me. 
+    When I can pull myself away from code, you'll find me hiking, camping, gaming, reading, and adventuring with my mutt pup, Bruno.  Check out some of my projects below, and always feel free to reach out to me through my contact info at the bottom.
     </p>
   </div>
 </section>
@@ -152,8 +152,9 @@
 <footer role="contentinfo">
   <section id="contact-container">
       <h1 class="projects-header">Contact</h1>
+      <p class="contact-text"> Whether it's for business & project inquiries or just talking code, I'm always available and excited to respond.</p>
       <h3 class="contact-info">Check out my <a href="https://github.com/jeffconnelly" target="_blank">Github</a>  <span class="fa fa-github" aria-hidden="true"></span> </h3>
-      <h3 class="contact-info">Reach out to me on <a href="https://www.linkedin.com/in/jeff-connelly-68394b65/" target="_blank">LinkedIn</a>  <span class="fa Example of linkedin-square fa-linkedin-square" aria-hidden="true"></span></h3>
+      <h3 class="contact-info">Reach out to me at <a href="https://www.linkedin.com/in/jeff-connelly-68394b65/" target="_blank">LinkedIn</a>  <span class="fa Example of linkedin-square fa-linkedin-square" aria-hidden="true"></span></h3>
       <h3 class="contact-info last-contact">Email me at <a href="mailto:jeff.connelly6@gmail.com" target="_top">jeff.connelly6@gmail.com</a></h3>
   </section>
 </footer>
