More changes to text

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <footer role="contentinfo">
   <section id="contact-container">
       <h1 class="projects-header">Contact</h1>
-      <p class="contact-text"> Whether it's for business & project inquiries or just talking code, I'm always available and excited to respond.</p>
+      <p class="contact-text"> Whether it's for professional inquiries or just talking code, I'm always available and excited to respond.</p>
       <h3 class="contact-info">Check out my <a href="https://github.com/jeffconnelly" target="_blank">Github</a>  <span class="fa fa-github" aria-hidden="true"></span> </h3>
       <h3 class="contact-info">Reach out to me at <a href="https://www.linkedin.com/in/jeff-connelly-68394b65/" target="_blank">LinkedIn</a>  <span class="fa Example of linkedin-square fa-linkedin-square" aria-hidden="true"></span></h3>
       <h3 class="contact-info last-contact">Email me at <a href="mailto:jeff.connelly6@gmail.com" target="_top">jeff.connelly6@gmail.com</a></h3>
