More text changes

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
     </h2>
     <p>I work primarily with the JavaScript MERN stack of MongoDB, Express, React, and Node.js, but I'm always excited to pick up new techologies. I love coding projects from the spark of an idea all the way to fully functional and powerful web applications.
 
-    I aim to build clean, scalable, and consistent code for every project, motivated by a growth mindset and an enthusiasm to learn something new, everyday.
+    I aim to build clean, scalable, and consistent code for every project, motivated by a growth mindset and an enthusiasm to learn something new everyday.
     <br>
     <br>
-    When I can pull myself away from code, you'll find me hiking, camping, gaming, reading, and adventuring with my mutt pup, Bruno.  Check out some of my projects below, and always feel free to reach out to me through my contact info at the bottom.
+    When I can pull myself away from code, you'll find me hiking, camping, gaming, reading, and adventuring with my mutt pup, Bruno.  Check out some of my projects below, and always feel free to reach out to me.
     </p>
   </div>
 </section>
@@ -125,7 +125,7 @@
         <h2 id="projectheader">
           StreamLine
         </h2>
-        <p>StreamLine your streaming process! StreamLine is the definitive directory for finding where you can watch movies and TV shows across multiple streaming services.  I primarily coded the backend for this project, working with Node/Express, MongoDB/Mongoose for the database, RESTful endpoints and testing with Mocha & Chai.
+        <p>StreamLine your streaming process! StreamLine is a directory for finding where you can watch movies across multiple streaming services.  I primarily coded the backend for this project, working with Node/Express, MongoDB/Mongoose for the database, RESTful endpoints and testing with Mocha & Chai.
         <br>
         <br>
         </p>
