--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div>
 			<div class="row">
 				<div class="col-lg-12">
-				<img src="jcc.png" id="jc-top-img" alt="Jeff Profile" class="center-block">
+				<img src="screenshots/jcc.png" id="jc-top-img" alt="Jeff Profile" class="center-block">
 				</div>
 			</div>
 		</div>
@@ -84,7 +84,7 @@
 
 <!-- About Me Section -->
 <section id="about-container">
-  <img src="IMG_4322.jpg" class="jcportraitimg" alt="Jeff Profile Headshot" class="center-block">
+  <img src="screenshots/jeff-headshot.jpg" class="jcportraitimg" alt="Jeff Profile Headshot" class="center-block">
   <div id="abouttext">
     <h2 id="aheader">
       About Me
@@ -106,7 +106,7 @@
 <section id="project-container">
   <h1 class="projects-header">My Projects</h1>
   <section id="projects-container">
-      <img src="hikes-to-hops.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+      <img src="screenshots/hikes-to-hops.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
       <div id="projecttext">
         <h2 id="projectheader">
           Hikes To Hops
@@ -120,7 +120,7 @@
     </section>
 
   <section id="projects-container">
-      <img src="streamline.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+      <img src="screenshots/streamline.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
       <div id="projecttext">
         <h2 id="projectheader">
           StreamLine
