--- a/index.html
+++ b/index.html
@@ -103,8 +103,24 @@
 </div>
 
 <!-- Projects Section -->
+
 <section id="project-container">
   <h1 class="projects-header">My Projects</h1>
+
+  <section id="projects-container">
+    <img src="screenshots/hearthhome-header.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+    <div id="projecttext">
+      <h2 id="projectheader">
+        HearthHome
+      </h2>
+      <p>HearthHome is a card database and deck builder site for the popular digital card game, Hearthstone. HearthHome is a one page app designed to make it easy on users to quickly switch back and forth between wanting to view and filter the latest Hearthstone cards and to build out their own decks.
+      <br>
+      <br>
+      </p>
+      <p class="center-p">Check out the  <a href="https://adoring-bardeen-d90d59.netlify.com/" target="_blank">site</a></p>
+    </div>
+  </section>
+
   <section id="projects-container">
       <img src="screenshots/hikes-to-hops.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
       <div id="projecttext">
@@ -132,22 +148,10 @@
           <p class="center-p">Check out the <a href="https://streamline-capstone.herokuapp.com/" target="_blank">site</a></p>
       </div>
     </section>
+</section>
 
 <!-- Contact Section -->
-  <section id="projects-container">
-      <img src="hikes-to-hops.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
-      <div id="projecttext">
-        <h2 id="projectheader">
-          Next Project
-        </h2>
-        <p>Hikes to Hops is an app that searches for local trails and will pair your trail of choice with a nearby brewery for your victory lap! The app uses Google Map's geolocation API, the Hiking Project API, and the BreweryDB API.
-        <br>
-        <br>
-        </p>
-        <p class="center-p">Check out the  <a href="https://hikes-to-hops.herokuapp.com/" target="_blank">site</a></p>
-      </div>
-    </section>
-</section>
+
 
 <footer role="contentinfo">
   <section id="contact-container">
