--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 		<div>
 			<div class="row">
 				<div class="col-lg-12">
-				<img src="screenshots/jcc.png" id="jc-top-img" alt="Jeff Profile" class="center-block">
+				<img src="./screenshots/jcc.png" id="jc-top-img" alt="Jeff Profile" class="center-block">
 				</div>
 			</div>
 		</div>
