--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,14 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:200,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+<link rel="shortcut icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+<link rel="manifest" href="./site.webmanifest">
+<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
@@ -113,7 +120,7 @@
       <h2 id="projectheader">
         HearthHome
       </h2>
-      <p>HearthHome is a card database and deck builder site for the popular digital card game, Hearthstone. HearthHome is a one page app designed to make it easy on users to quickly switch back and forth between wanting to view and filter the latest Hearthstone cards and to build out their own decks.
+      <p>HearthHome is a card database and deck builder site for the popular digital card game, Hearthstone. HearthHome was designed to make it easy on users to quickly switch back and forth between wanting to view and filter the latest Hearthstone cards and to build out their own decks, all one one page.
       <br>
       <br>
       Teck Stack: MERN stack with MongoDB, Express, React.js and Node.js. React/Redux front end architecture.
