--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
         <br>
         <br>
         </p>
-          <p class="center-p">Check out the  <a href="https://hikes-to-hops.herokuapp.com/" target="_blank">site</a></p>
+          <p class="center-p">Check out the  <a href="https://hikes-to-hops.herokuapp.com/" target="_blank">Site </a>| <a href="https://github.com/jeffconnelly/hikes-to-hops" target=_blank"">Repo</a></p>
       </div>
     </section>
 
