--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
       <p>HearthHome is a card database and deck builder site for the popular digital card game, Hearthstone. HearthHome was designed to make it easy on users to quickly switch back and forth between wanting to view and filter the latest Hearthstone cards and to build out their own decks, all one one page.
       <br>
       <br>
-      Teck Stack: MERN stack with MongoDB, Express, React.js and Node.js. React/Redux front end architecture.
+      <span class="tech-stack">Tech Stack:</span> MERN stack with MongoDB, Express, React/Redux and Node.js.
       <br>
       <br>
       </p>
@@ -139,6 +139,9 @@
         <p>Hikes to Hops is an app that searches for local trails and will pair your trail of choice with a nearby brewery for your victory lap! The app uses Google Map's geolocation API, the Hiking Project API, and the BreweryDB API.
         <br>
         <br>
+        <span class="tech-stack">Tech Stack:</span> HTML5, CSS3, jQuery, Node.js.
+        <br>
+        <br>
         </p>
           <p class="center-p">Check out the  <a href="https://hikes-to-hops.herokuapp.com/" target="_blank">Site </a>| <a href="https://github.com/jeffconnelly/hikes-to-hops" target=_blank"">Repo</a></p>
       </div>
@@ -153,8 +156,11 @@
         <p>StreamLine your streaming process! StreamLine is a directory for finding where you can watch movies across multiple streaming services.  I primarily coded the backend for this project, working with Node/Express, MongoDB/Mongoose for the database, RESTful endpoints and testing with Mocha & Chai.
         <br>
         <br>
+        <span class="tech-stack">Tech Stack:</span> HTML5, CSS3, jQuery, Node.js/Express, MongoDB/Mongoose.
+        <br>
+        <br>
         </p>
-          <p class="center-p">Check out the <a href="https://streamline-capstone.herokuapp.com/" target="_blank">Site</a> | <a href="https://github.com/thinkful-ei17/Tricia-Jeff-Node-Capstone" target=_blank"">Repo</a></p>
+          <p class="center-p">Check out the <a href="https://streamline-capstone.herokuapp.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/StreamLine" target=_blank"">Repo</a></p>
       </div>
     </section>
 </section>
