Cleaned up some mobile responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 </nav>
 
 <header role="banner">
-<div class="container-fluid" id="headerimg">
+<section class="container-fluid" id="headerimg">
 	<div class="container">
 
 <!-- Header Profile Image --> 
@@ -66,17 +66,15 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div id="headercontent">
-              <!-- <span class="header-background"> -->
 							<h1 class="header-background">JEFF CONNELLY</h1>
 							<h3 class="header-background">Full Stack Web Developer</h3>
               <hr class = "hr-line">
-              <!-- </span> -->
 						</div>
 					</div>
 				</div>
 			</div>
 	</div>
-</div>
+</section>
 </header>
 
 <!-- Main Section All Wrapped Belows -->
@@ -85,7 +83,7 @@
 <!-- Intro Text Section -->
 <div class="container-fluid" id="head-container">
 	<h2 id="pheader">
-		Hi, I'm Jeff.  I'm a full stack developer living out here in sunny Colorado Springs, CO.<br> I look forward to connecting with you!
+		Hi, I'm Jeff.  I'm a full stack developer living out here in sunny Colorado Springs, CO.<span class="connect-wrapper"> I look forward to connecting with you! </span>
 	</h2>
 </div>
 
@@ -96,7 +94,7 @@
     <h2 id="aheader">
       About Me
     </h2>
-    <p>I work primarily with the JavaScript MERN stack of MongoDB, Express, React, and Node.js, but I'm always excited to pick up new techologies. I love coding projects from the spark of an idea all the way to fully functional and powerful web applications.
+    <p>I work primarily with the JavaScript MERN stack of MongoDB, Express, React, and Node.js, but I'm always excited to pick up new technologies. I love coding projects from the spark of an idea all the way to fully functional and powerful web applications.
 
     I aim to build clean, scalable, and consistent code for every project, motivated by a growth mindset and an enthusiasm to learn something new everyday.
     <br>
@@ -105,9 +103,6 @@
     </p>
   </div>
 </section>
-
-<div id="project-section-link">
-</div>
 
 <!-- Projects Section -->
 <section id="project-container">
@@ -120,11 +115,7 @@
         HearthHome
       </h2>
       <p>HearthHome is a card database and deck builder site for the popular digital card game, Hearthstone. HearthHome was designed to make it easy on users to quickly switch back and forth between wanting to view and filter the latest Hearthstone cards and to build out their own decks, all one one page.
-      <br>
-      <br>
-      <span class="tech-stack">Tech Stack:</span> MERN stack with MongoDB, Express, React/Redux and Node.js.
-      <br>
-      <br>
+      <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack:</span> MERN stack with MongoDB, Express, React/Redux and Node.js.</span>
       </p>
       <p class="center-p">Check out the:   <a href="https://adoring-bardeen-d90d59.netlify.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/HearthHome-client" target=_blank"">Repo</a></p>
     </div>
@@ -137,15 +128,11 @@
           Hikes To Hops
         </h2>
         <p>Hikes to Hops is an app that searches for local trails and will pair your trail of choice with a nearby brewery for your victory lap! The app uses Google Map's geolocation API, the Hiking Project API, and the BreweryDB API.
-        <br>
-        <br>
-        <span class="tech-stack">Tech Stack:</span> HTML5, CSS3, jQuery, Node.js.
-        <br>
-        <br>
+        <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack:</span> HTML5, CSS3, jQuery, Node.js.</span>
         </p>
           <p class="center-p">Check out the  <a href="https://hikes-to-hops.herokuapp.com/" target="_blank">Site </a>| <a href="https://github.com/jeffconnelly/hikes-to-hops" target=_blank"">Repo</a></p>
       </div>
-    </section>
+  </section>
 
   <section id="projects-container">
       <img src="screenshots/streamline.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
@@ -153,12 +140,8 @@
         <h2 id="projectheader">
           StreamLine
         </h2>
-        <p>StreamLine your streaming process! StreamLine is a directory for finding where you can watch movies across multiple streaming services.  I primarily coded the backend for this project, working with Node/Express, MongoDB/Mongoose for the database, RESTful endpoints and testing with Mocha & Chai.
-        <br>
-        <br>
-        <span class="tech-stack">Tech Stack:</span> HTML5, CSS3, jQuery, Node.js/Express, MongoDB/Mongoose.
-        <br>
-        <br>
+        <p>StreamLine is a directory for finding where you can watch movies across multiple streaming services.  I primarily coded the backend for this project, working with Node/Express, MongoDB/Mongoose, RESTful endpoints and testing with Mocha & Chai.
+        <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack</span> HTML5, CSS3, jQuery, Node.js/Express, MongoDB/Mongoose.</span>
         </p>
           <p class="center-p">Check out the <a href="https://streamline-capstone.herokuapp.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/StreamLine" target=_blank"">Repo</a></p>
       </div>
