--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
           StreamLine
         </h2>
         <p>StreamLine is a directory for finding where you can watch movies across multiple streaming services.  I primarily coded the backend for this project, working with Node/Express, MongoDB/Mongoose, RESTful endpoints and testing with Mocha & Chai.
-        <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack</span> HTML5, CSS3, jQuery, Node.js/Express, MongoDB/Mongoose.</span>
+        <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack: </span> HTML5, CSS3, jQuery, Node.js/Express, MongoDB/Mongoose.</span>
         </p>
           <p class="center-p">Check out the <a href="https://streamline-capstone.herokuapp.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/StreamLine" target=_blank"">Repo</a></p>
       </div>
