Added Luz to Portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,19 @@
   <h1 class="projects-header">My Projects</h1>
 
   <section id="projects-container">
+    <img src="screenshots/luz-landing.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+    <div id="projecttext">
+      <h2 id="projectheader">
+        Luz
+      </h2>
+      <p>Luz is a Spanish learning app to help you solidify vocabulary words using interactive flashcards and the power of spaced repetition.  With Luz, we practice learning Spanish in an efficient manner to retain words for a longer period. Luz employs a linked list data structure for our spaced repetition algorithm.
+      <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack: </span> MERN stack with MongoDB, Express, React/Redux and Node.js.</span>
+      </p>
+        <p class="center-p">Check out the <a href="https://wonderful-shirley-bab865.netlify.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/spaced-repetition-client" target=_blank"">Repo</a></p>
+    </div>
+  </section>
+  
+  <section id="projects-container">
     <img src="screenshots/hearthhome-header-view.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
     <div id="projecttext">
       <h2 id="projectheader">
@@ -134,18 +147,7 @@
       </div>
   </section>
 
-  <section id="projects-container">
-      <img src="screenshots/streamline.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
-      <div id="projecttext">
-        <h2 id="projectheader">
-          StreamLine
-        </h2>
-        <p>StreamLine is a directory for finding where you can watch movies across multiple streaming services.  I primarily coded the backend for this project, working with Node/Express, MongoDB/Mongoose, RESTful endpoints and testing with Mocha & Chai.
-        <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack: </span> HTML5, CSS3, jQuery, Node.js/Express, MongoDB/Mongoose.</span>
-        </p>
-          <p class="center-p">Check out the <a href="https://streamline-capstone.herokuapp.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/StreamLine" target=_blank"">Repo</a></p>
-      </div>
-    </section>
+  
 </section>
 
 <!-- Contact Section -->
