Setting up rn app

--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,7 @@
 <section id="project-container">
   <h1 class="projects-header">My Projects</h1>
 
+
   <section id="projects-container">
     <img src="screenshots/luz-landing.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
     <div id="projecttext">
@@ -131,6 +132,19 @@
       <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack:</span> MERN stack with MongoDB, Express, React/Redux and Node.js.</span>
       </p>
       <p class="center-p">Check out the:   <a href="https://adoring-bardeen-d90d59.netlify.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/HearthHome-client" target=_blank"">Repo</a></p>
+    </div>
+  </section>
+
+  <section id="projects-container">
+    <img src="screenshots/hearthhome-header-view.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+    <div id="projecttext">
+      <h2 id="projectheader">
+        Topical
+      </h2>
+      <p>Topical is a React Native app that presents breaking news on all your favorite topics, including technology, sports, science, politics, health, and more!
+      <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack:</span> React Native</span>
+      </p>
+      <p class="center-p">Check out the: <a href="https://github.com/jeffconnelly/HearthHome-client" target=_blank"">Repo</a></p>
     </div>
   </section>
 
