Added styling for rn app

--- a/public/index.html
+++ b/public/index.html
@@ -136,8 +136,8 @@
   </section>
 
   <section id="projects-container">
-    <img src="screenshots/topical-home.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
-    <img src="screenshots/topical-topic-page.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+    <img src="screenshots/topical-home.png" class="project-img topical" alt="Jeff Profile Headshot" class="center-block">
+    <img src="screenshots/topical-topic-page.png" class="project-img topical" alt="Jeff Profile Headshot" class="center-block">
     <div id="projecttext">
       <h2 id="projectheader">
         Topical
