Finished adding initial rn project

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
       <p>HearthHome is a card database and deck builder site for the popular digital card game, Hearthstone. HearthHome was designed to make it easy on users to quickly switch back and forth between wanting to view and filter the latest Hearthstone cards and to build out their own decks, all one one page.
       <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack:</span> MERN stack with MongoDB, Express, React/Redux and Node.js.</span>
       </p>
-      <p class="center-p">Check out the:   <a href="https://adoring-bardeen-d90d59.netlify.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/HearthHome-client" target=_blank"">Repo</a></p>
+      <p class="center-p">Check out the <a href="https://adoring-bardeen-d90d59.netlify.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/HearthHome-client" target=_blank"">Repo</a></p>
     </div>
   </section>
 
@@ -142,10 +142,10 @@
       <h2 id="projectheader">
         Topical
       </h2>
-      <p>Topical is a React Native app that presents breaking news on all your favorite topics, including technology, sports, science, politics, health, and more!
+      <p>Topical is a React Native app that presents breaking news on all your favorite topics, including technology, sports, science, politics, health, and more!  Topical will be deployed soon live, but for now users can clone the repo and run locally.
       <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack:</span> React Native</span>
       </p>
-      <p class="center-p">Check out the: <a href="https://github.com/jeffconnelly/HearthHome-client" target=_blank"">Repo</a></p>
+      <p class="center-p">Check out the <a href="https://github.com/jeffconnelly/react-native-topical" target=_blank"">Repo</a></p>
     </div>
   </section>
 
