--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
 
   <section id="projects-container">
     <img src="screenshots/topical-home.png" class="project-img topical" alt="Jeff Profile Headshot" class="center-block">
-    <img src="screenshots/topical-topic-page.png" class="project-img topical" alt="Jeff Profile Headshot" class="center-block">
+    <img src="screenshots/topical-topic-page.png" class="project-img topical topical-right" alt="Jeff Profile Headshot" class="center-block">
     <div id="projecttext">
       <h2 id="projectheader">
         Topical
