--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,19 @@
 <!-- Projects Section -->
 <section id="project-container">
   <h1 class="projects-header">My Projects</h1>
-
+  
+  <section id="projects-container">
+    <img src="screenshots/luz-landing.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+    <div id="projecttext">
+      <h2 id="projectheader">
+        Luz
+      </h2>
+      <p>Luz is a Spanish learning app to help you solidify vocabulary words using interactive flashcards and the power of spaced repetition.  With Luz, we practice learning Spanish in an efficient manner to retain words for a longer period. Luz employs a linked list data structure for our spaced repetition algorithm.
+      <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack: </span> MERN stack with MongoDB, Express, React/Redux and Node.js.</span>
+      </p>
+        <p class="center-p">Check out the <a href="https://wonderful-shirley-bab865.netlify.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/spaced-repetition-client" target=_blank"">Repo</a></p>
+    </div>
+  </section>
 
   <section id="projects-container">
     <img src="screenshots/luz-landing.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
