--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
   <h1 class="projects-header">My Projects</h1>
 
   <section id="projects-container">
-    <img src="screenshots/luz-landing.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+    <img src="screenshots/cross-share-header.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
     <div id="projecttext">
       <h2 id="projectheader">
         CrossShare
