Fix alt image tags

--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
   <h1 class="projects-header">My Projects</h1>
 
   <section id="projects-container">
-    <img src="screenshots/cross-share-header.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+    <img src="screenshots/cross-share-header.png" class="project-img" alt="CrossShare Photo" class="center-block">
     <div id="projecttext">
       <h2 id="projectheader">
         CrossShare
@@ -122,7 +122,7 @@
   </section>
 
   <section id="projects-container">
-    <img src="screenshots/luz-landing.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+    <img src="screenshots/luz-landing.png" class="project-img" alt="Luz Photo" class="center-block">
     <div id="projecttext">
       <h2 id="projectheader">
         Luz
@@ -135,7 +135,7 @@
   </section>
   
   <section id="projects-container">
-    <img src="screenshots/hearthhome-header-view.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+    <img src="screenshots/hearthhome-header-view.png" class="project-img" alt="HearthHome Photo" class="center-block">
     <div id="projecttext">
       <h2 id="projectheader">
         HearthHome
@@ -149,7 +149,7 @@
 
   <section id="projects-container">
     <img src="screenshots/topical-home.png" class="project-img topical" alt="Jeff Profile Headshot" class="center-block">
-    <img src="screenshots/topical-topic-page.png" class="project-img topical topical-right" alt="Jeff Profile Headshot" class="center-block">
+    <img src="screenshots/topical-topic-page.png" class="project-img topical topical-right" alt="Topical Photo" class="center-block">
     <div id="projecttext">
       <h2 id="projectheader">
         Topical
@@ -162,7 +162,7 @@
   </section>
 
   <section id="projects-container">
-      <img src="screenshots/hikes-to-hops.png" class="project-img" alt="Jeff Profile Headshot" class="center-block">
+      <img src="screenshots/hikes-to-hops.png" class="project-img" alt="Hikes to Hops Photo" class="center-block">
       <div id="projecttext">
         <h2 id="projectheader">
           Hikes To Hops
